Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-13965

Plugin mimetypes XML can crash qtcreator

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • Qt Creator 3.6.0-rc1
    • Qt Creator 3.2.2
    • All Other Issues
    • None
    • Linux, OSX, Qt5.3, Qt5.4

    Description

      I faced some cryptic crashed when I'm developing new plugin. I fund that it's cased by a bad mimetypes xml loaded for the plugin.

      When you use the same string for mimetype and sub-class the inifinite recursion starts when I open Tools/Preferences.

      It is not a really critical issue but I'd expect something like "cannot load plugin" warning instead of real crash:
      SIGSEV

      0 QBasicAtomicOps<4>::ref<int> qatomic_x86.h 181 0x7fffe3aef2ed
      1 QBasicAtomicInteger<int>::ref qbasicatomic.h 135 0x7fffe3aef1ec
      2 QtPrivate::RefCount::ref qrefcount.h 63 0x7fffe3aeece8
      3 QString::QString qstring.h 815 0x7fffe3aef018
      4 Core::MimeType::type mimedatabase.cpp 693 0x7fffe3bc0fe7
      5 mimeTypeFactoryRecursion<Core::IEditorFactory> editormanager.cpp 2218 0x7fffe3b42c08
      6 mimeTypeFactoryRecursion<Core::IEditorFactory> editormanager.cpp 2236 0x7fffe3b42dd2
      7 mimeTypeFactoryRecursion<Core::IEditorFactory> editormanager.cpp 2236 0x7fffe3b42dd2
      8 mimeTypeFactoryRecursion<Core::IEditorFactory> editormanager.cpp 2236 0x7fffe3b42dd2
      9 mimeTypeFactoryRecursion<Core::IEditorFactory> editormanager.cpp 2236 0x7fffe3b42dd2
      10 mimeTypeFactoryRecursion<Core::IEditorFactory> editormanager.cpp 2236 0x7fffe3b42dd2
      11 mimeTypeFactoryRecursion<Core::IEditorFactory> editormanager.cpp 2236 0x7fffe3b42dd2
      12 mimeTypeFactoryRecursion<Core::IEditorFactory> editormanager.cpp 2236 0x7fffe3b42dd2
      13 mimeTypeFactoryRecursion<Core::IEditorFactory> editormanager.cpp 2236 0x7fffe3b42dd2
      14 mimeTypeFactoryRecursion<Core::IEditorFactory> editormanager.cpp 2236 0x7fffe3b42dd2
      15 mimeTypeFactoryRecursion<Core::IEditorFactory> editormanager.cpp 2236 0x7fffe3b42dd2
      16 mimeTypeFactoryRecursion<Core::IEditorFactory> editormanager.cpp 2236 0x7fffe3b42dd2
      17 mimeTypeFactoryRecursion<Core::IEditorFactory> editormanager.cpp 2236 0x7fffe3b42dd2
      18 mimeTypeFactoryRecursion<Core::IEditorFactory> editormanager.cpp 2236 0x7fffe3b42dd2
      19 mimeTypeFactoryRecursion<Core::IEditorFactory> editormanager.cpp 2236 0x7fffe3b42dd2
      20 mimeTypeFactoryRecursion<Core::IEditorFactory> editormanager.cpp 2236 0x7fffe3b42dd2
      ... <More>

      <?xml version="1.0" encoding="UTF-8"?>
      <mime-info xmlns='http://www.freedesktop.org/standards/shared-mime-info'>

      ... snip ...
      <mime-type type="text/x-qorus-qclass">
      <sub-class-of type="text/x-qorus-qclass"/> <-- this should be eg. text/plain
      <comment>Qorus class</comment>
      <glob pattern="*.qclass"/>
      </mime-type>

      ... snip ...

      </mime-info>

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            con Eike Ziller
            pvanek Petr Vanek
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes