Fix that bogus mime data could lead to endless loop

<mime-type type="text/foo">
  <sub-class-of type="text/foo"/>
</mime-type>

Change-Id: Id03cb4a37345ccc083eaaa03c33847b3735a5d4b
Task-number: QTCREATORBUG-13965
Reviewed-by: David Schulz <david.schulz@theqtcompany.com>